Update django celery worker zombie process.md